# knowra

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  AGENTS.md  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260514_0001_enable_pgvector.py  20260523_0001_create_users.py  20260525_0001_create_uploaded_files.py  20260528_0001_create_documents.py  20260605_0001_create_document_parsing.py  20260612_0001_create_document_chunking.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  logging.py  middleware.py  request_context.py  trace_context.py
backend/app/db/: init_db.py  session.py
backend/app/middleware/: trace.py
backend/app/models/: __init__.py  base.py  document.py  document_chunking.py  document_parsing.py  uploaded_file.py  user.py
backend/app/schemas/: document.py  document_chunking.py  document_parsing.py  upload.py  user.py
backend/app/services/: document_chunk_storage.py  document_chunker.py  document_chunking.py  document_parse_dispatcher.py  document_parse_storage.py  document_parser.py  document_parsing.py  document_processing.py  uploads.py  users.py
backend/tests/: document_chunking_helpers.py  document_parsing_helpers.py  test_integration.py
backend/tests/alembic/: test_create_users_migration.py  test_document_chunking_migration.py  test_document_parsing_migration.py  test_document_processing_migration.py  test_uploaded_files_migration.py
backend/tests/api/: test_documents.py  (+6 more)
(+140 files in other folders)
