[project]
name = "knowra-backend"
version = "0.1.0"
description = "FastAPI backend for knowra"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.122.0",
    "gunicorn>=23.0.0",
    "pgvector>=0.4.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.0",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
